--- a/css/styles.css
+++ b/css/styles.css
@@ -65,12 +65,33 @@ a {
   margin-left: 0.1%;
 }
 
-@media (max-width: 768px) {
+@media only screen and (max-width: 768px) {
   .container-nav {
     background-color: #00000000;
     border-radius: 0px;
     padding: 5px 0;
     text-align: center;
+    left: 0;
+    right: 0;
+    top: 0;
+  }
+
+  .navbar-collpase:active {
+    background-color: #373b40;
+  }
+
+  .navbar-collpase:focus {
+    background-color: #373b40;
+  }
+
+
+  .title {
+    margin-top: 20px;
+    background-color: #373b40;
+    padding: 50px;
+    padding-left: 50px !important;
+    margin-left: 0px !important;
+    margin-top: 0px !important;
   }
 }
 
