--- a/css/styles.css
+++ b/css/styles.css
@@ -204,20 +204,122 @@ hr {
 
 /*                    Experiences                   */
 #experience {
-  padding: 2% 15%;
+  padding: 5% 15%;
 }
 
 .experience-title {
-  text-align: center;
-  padding-bottom: 1%;
+  display: flex;
+  justify-content: center;
+}
+
+.experience-title h2 {
+  line-height: 0.65;
+  text-align: left;
+}
+
+.subtitle {
+  font-size: 0.9rem;
+  font-weight: 500;
+  color: #68e0cf;
+}
+
+.experience-content {
+  margin-top: 8%;
+}
+
+@media (max-width: 767px) {
+    .carousel-inner .carousel-item > div {
+        display: none;
+    }
+    .carousel-inner .carousel-item > div:first-child {
+        display: block;
+    }
 }
 
 .carousel-item {
-    margin-right: 0;
+  transition-duration: 0.5s;
 }
 
-.carousel-inner .active+.carousel-item+.carousel-item {
-  display: block;
+.carousel-inner .carousel-item.active,
+.carousel-inner .carousel-item-next,
+.carousel-inner .carousel-item-prev {
+    display: flex;
 }
 
+/* medium and up screens */
+@media (min-width: 768px) {
+
+    .carousel-inner .carousel-item-end.active,
+    .carousel-inner .carousel-item-next {
+      transform: translateX(33.33%);
+    }
+
+    .carousel-inner .carousel-item-start.active,
+    .carousel-inner .carousel-item-prev {
+      transform: translateX(-33.33%);
+    }
+}
+
+.carousel-inner .carousel-item-end,
+.carousel-inner .carousel-item-start {
+  transform: translateX(0);
+}
+
+.carousel-controls {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding-top: 3%;
+}
+
+.carousel-controls .carousel-control-prev, .carousel-controls .carousel-control-next {
+  position: relative;
+}
+
+.circular-icon {
+    width: 64px;
+    height: 64px;
+    border-radius: 50%;
+    text-align: center;
+    line-height: 64px;
+    border: 1px solid #585d65;
+}
+
+.experience-item {
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+  margin-right: 5%;
+  margin-left: 5%;
+}
+
+.experience-top {
+  display: flex;
+  line-height: 1;
+}
+
+.experience-top h6 {
+  margin: 0;
+  color: #68e0cf;
+  writing-mode: vertical-rl;
+  font-weight: 600;
+  font-size: .7rem;
+}
+
+.company-name {
+  font-weight: 800;
+  font-size: 1.4rem;
+  color: white;
+  margin-left: 8%;
+  padding: 0px;
+  text-align: left;
+}
+
+.experience-bottom {
+  font-weight: 400;
+  font-size: .8rem;
+  color: white;
+  text-align: left;
+  margin-top: 8%;
+  line-height: 2;
 }
