--- a/css/styles.css
+++ b/css/styles.css
@@ -279,10 +279,11 @@ hr {
 .circular-icon {
     width: 64px;
     height: 64px;
-    border-radius: 50%;
+    border-radius: 32px;
     text-align: center;
     line-height: 64px;
     border: 1px solid #585d65;
+    margin: 20px;
 }
 
 .experience-item {
