--- a/css/styles.css
+++ b/css/styles.css
@@ -204,7 +204,7 @@ hr {
 
 /*                    Experiences                   */
 #experience {
-  padding: 5% 15%;
+  padding: 80px 15%;
 }
 
 .experience-title {
@@ -224,7 +224,7 @@ hr {
 }
 
 .experience-content {
-  margin-top: 8%;
+  margin-top: 80px;
 }
 
 @media (max-width: 767px) {
