Added experience section

--- a/css/styles.css
+++ b/css/styles.css
@@ -25,8 +25,8 @@ hr {
   width: 80%;
   color: #585d65;
   margin: auto;
-  height: 2px !important;
-  margin-top: 3%;
+  height: 1px !important;
+  margin-top: 40px;
 }
 
 .row {
@@ -204,7 +204,7 @@ hr {
 
 /*                    Experiences                   */
 #experience {
-  padding: 80px 15%;
+  padding: 40px 15%;
 }
 
 .experience-title {
