--- a/css/styles.css
+++ b/css/styles.css
@@ -27,6 +27,7 @@ hr {
   margin: auto;
   height: 1px !important;
   margin-top: 40px;
+  margin-bottom: 40px;
 }
 
 .row {
@@ -204,7 +205,7 @@ hr {
 
 /*                    Experiences                   */
 #experience {
-  padding: 40px 15%;
+  padding: 0px 15%;
 }
 
 .experience-title {
@@ -283,7 +284,8 @@ hr {
     text-align: center;
     line-height: 64px;
     border: 1px solid #585d65;
-    margin: 20px;
+    margin-left: 15px;
+    margin-right: 15px;
 }
 
 .experience-item {
