--- a/css/styles.css
+++ b/css/styles.css
@@ -117,6 +117,10 @@ hr {
     font-size: 2rem;
   }
 
+  h2 {
+    font-size: 2.5rem;
+  }
+
   .about-me {
     padding-left: 20px !important;
   }
