--- a/css/styles.css
+++ b/css/styles.css
@@ -29,6 +29,22 @@ hr {
   margin-bottom: 40px;
 }
 
+ul {
+  list-style-type: none;
+  margin: 0;
+}
+
+li {
+  font-weight: 500;
+  font-size: 0.9rem;
+  line-height: 2;
+  color: white;
+}
+
+li span {
+  color: #68e0cf;
+}
+
 .row {
   margin: 0;
 }
@@ -92,6 +108,14 @@ hr {
   }
 
   #skills {
+    padding: 0px 10% !important;
+  }
+
+  #education {
+    padding: 0px 10% !important;
+  }
+
+  #contact {
     padding: 0px 10% !important;
   }
 
@@ -225,7 +249,7 @@ hr {
 }
 
 .section-title h2 {
-  line-height: 0.8;
+  line-height: 0.65;
   text-align: left;
 }
 
@@ -541,4 +565,27 @@ hr {
   to {
     width: 5%;
   }
+}
+
+
+/********************   EDUCATION **********************/
+#education {
+  padding: 0px 15%;
+}
+
+/********************   Contact **********************/
+#contact {
+  padding: 0px 15%;
+}
+
+.contact-container {
+  display: flex;
+  justify-content: center;
+  margin-top: 5rem;
+}
+
+.contact-box {
+  border-radius: 20px;
+  border:1px solid white;
+  padding: 1rem;
 }
